update to 1.20.6, improve datagen, setup chenille, update license headers